Bugfix footer not displaying at bottom of the page when on mobile

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -24,8 +24,13 @@ body {
     background-color: #E7DFC6;
     color: #131B23;
     font-family: 'Josefin Sans', sans-serif;
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+#footer {
+    margin-top: auto;
+} 
 
 /* Style the header */
 header {
